--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,19 @@
 
 <body>
     <p>Welcome To Chat App</p>
+    <script src="/socket.io/socket.io.js"></script>
+    <script>
+        var socket = io();
+
+        socket.on('connect', () => {
+            console.log('connect to server');
+        });
+
+        socket.on('disconnect', () => {
+            console.log('Disconnected From Server');
+        })
+
+    </script>
 </body>
 
 </html>
